// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the svg path shape 1 (stop sign) should match the snapshot 1`] = `
<body>
  <div
    class="Toaster"
    id="react-toast"
  >
    <span
      class="Toaster__manager-top"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; margin: 0px auto; text-align: center; top: 0px; right: 0px; left: 0px;"
    />
    <span
      class="Toaster__manager-top-left"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; top: 0px; left: 0px;"
    />
    <span
      class="Toaster__manager-top-right"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; top: 0px; right: 0px;"
    />
    <span
      class="Toaster__manager-bottom-left"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; bottom: 0px; left: 0px;"
    />
    <span
      class="Toaster__manager-bottom"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; margin: 0px auto; text-align: center; bottom: 0px; right: 0px; left: 0px;"
    />
    <span
      class="Toaster__manager-bottom-right"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; bottom: 0px; right: 0px;"
    />
  </div>
  <div>
    <div
      class="css-kqywxn"
    >
      <div
        class="css-1c4rusl"
      >
        <div
          class="css-8meu9y"
          data-testid="shape"
          style="width: 2em; height: 2em; clip-path: url(#path-f032a833e240e62937ad9533bc337a97);"
        >
          <div
            class="css-19wy3bq"
          >
            <div
              class="css-1rjzkmk"
            >
              this is html
            </div>
          </div>
        </div>
        <div
          class="css-3sakfm"
          style="filter: url(#filter-81618823da0884cccd5778b780210f0e);"
        >
          <div
            class="css-1ex0plv"
            style="clip-path: url(#path-f032a833e240e62937ad9533bc337a97);"
          />
        </div>
        <div
          class="css-s8qk35"
        >
          <svg
            fill="transparent"
            height="100%"
            style="position: absolute; top: 0px; left: 0px;"
            viewBox="0 0 1 1"
            width="100%"
          >
            <path
              d="M 0.29289321881345254 0 L 0.7071067811865476 6.245004513516506e-17 M 0.7071067811865476 6.245004513516506e-17 L 1.0000000000000002 0.29289321881345254"
              fill="transparent"
              stroke="white"
              stroke-width="NaNpx"
            />
            <path
              d="M 1.0000000000000002 0.29289321881345254 L 1.0000000000000002 0.7071067811865477"
              fill="transparent"
              stroke="white"
              stroke-width="NaNpx"
            />
            <path
              d="M 1.0000000000000002 0.7071067811865477 L 0.7071067811865476 1.0000000000000002 M 0.7071067811865476 1.0000000000000002 L 0.2928932188134524 1.0000000000000002"
              fill="transparent"
              stroke="white"
              stroke-width="NaNpx"
            />
            <path
              d="M 0.2928932188134524 1.0000000000000002 L 0 0.7071067811865477 M 0 0.7071067811865477 L 0 0.29289321881345254 M 0 0.29289321881345254 L 0.29289321881345254 0  "
              fill="transparent"
              stroke="white"
              stroke-width="NaNpx"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    id="once-d4cdfd84b312b43f1b8054427089f6dc"
  >
    <svg>
      <clippath
        clipPathUnits="objectBoundingBox"
        id="path-f032a833e240e62937ad9533bc337a97"
      >
        <path
          d="M0.29289321881345254 0L0.7071067811865476 6.245004513516506e-17 1.0000000000000002 0.29289321881345254 1.0000000000000002 0.7071067811865477 0.7071067811865476 1.0000000000000002 0.2928932188134524 1.0000000000000002 0 0.7071067811865477 0 0.29289321881345254Z"
        />
      </clippath>
    </svg>
  </div>
  <div
    id="once-fce492877a0be2c6885647e0089248d7"
  >
    <svg
      style="overflow: hidden; height: 0px; width: 0px; opacity: 0;"
    >
      <defs>
        <filter
          color-interpolation-filters="sRGB"
          height="300%"
          id="filter-81618823da0884cccd5778b780210f0e"
          width="300%"
          x="-100%"
          y="-100%"
        >
          <feflood
            flood-color="black"
            result="color-0"
          />
          <fecomposite
            in="color-0"
            in2="SourceGraphic"
            operator="out"
            result="inverse-0"
          />
          <femorphology
            in="filter-0"
            operator="dilate"
            radius="3"
            result="dilated-0"
          />
          <feoffset
            dx="0"
            dy="0"
            in="dilated-0"
            result="offsetted-0"
          />
          <fegaussianblur
            in="offsetted-0"
            result="blurred-0"
            stdDeviation="5"
          />
          <fecomposite
            in="blurred-0"
            in2="SourceGraphic"
            operator="in"
            result="shadow-0"
          />
          <fecomposite
            in="shadow-0"
            in2="SourceGraphic"
            operator="atop"
            result="filter-0"
          />
          <feflood
            flood-color="black"
            result="flooded-1"
          />
          <femorphology
            in="SourceAlpha"
            operator="dilate"
            radius="3"
            result="dilated-1"
          />
          <feoffset
            dx="0"
            dy="0"
            in="dilated-1"
            result="offset-1"
          />
          <fegaussianblur
            in="offset-1"
            result="blurred-1"
            stdDeviation="1.5"
          />
          <fecomposite
            in="flooded-1"
            in2="blurred-1"
            operator="in"
            result="shadow-1"
          />
          <femerge
            result="filter-1"
          >
            <femergenode
              in="shadow-1"
            />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
          <femerge>
            <femergenode
              in="filter-1"
            />
            <femergenode
              in="filter-0"
            />
          </femerge>
        </filter>
      </defs>
    </svg>
  </div>
</body>
`;

exports[`the svg path shape 2 (hexagon) should match the snapshot 1`] = `
<body>
  <div
    class="Toaster"
    id="react-toast"
  >
    <span
      class="Toaster__manager-top"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; margin: 0px auto; text-align: center; top: 0px; right: 0px; left: 0px;"
    />
    <span
      class="Toaster__manager-top-left"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; top: 0px; left: 0px;"
    />
    <span
      class="Toaster__manager-top-right"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; top: 0px; right: 0px;"
    />
    <span
      class="Toaster__manager-bottom-left"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; bottom: 0px; left: 0px;"
    />
    <span
      class="Toaster__manager-bottom"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; margin: 0px auto; text-align: center; bottom: 0px; right: 0px; left: 0px;"
    />
    <span
      class="Toaster__manager-bottom-right"
      style="max-width: 560px; position: fixed; z-index: 5500; pointer-events: none; bottom: 0px; right: 0px;"
    />
  </div>
  <div
    id="once-d4cdfd84b312b43f1b8054427089f6dc"
  >
    <svg>
      <clippath
        clipPathUnits="objectBoundingBox"
        id="path-f032a833e240e62937ad9533bc337a97"
      >
        <path
          d="M0.29289321881345254 0L0.7071067811865476 6.245004513516506e-17 1.0000000000000002 0.29289321881345254 1.0000000000000002 0.7071067811865477 0.7071067811865476 1.0000000000000002 0.2928932188134524 1.0000000000000002 0 0.7071067811865477 0 0.29289321881345254Z"
        />
      </clippath>
    </svg>
  </div>
  <div
    id="once-fce492877a0be2c6885647e0089248d7"
  >
    <svg
      style="overflow: hidden; height: 0px; width: 0px; opacity: 0;"
    >
      <defs>
        <filter
          color-interpolation-filters="sRGB"
          height="300%"
          id="filter-81618823da0884cccd5778b780210f0e"
          width="300%"
          x="-100%"
          y="-100%"
        >
          <feflood
            flood-color="black"
            result="color-0"
          />
          <fecomposite
            in="color-0"
            in2="SourceGraphic"
            operator="out"
            result="inverse-0"
          />
          <femorphology
            in="filter-0"
            operator="dilate"
            radius="3"
            result="dilated-0"
          />
          <feoffset
            dx="0"
            dy="0"
            in="dilated-0"
            result="offsetted-0"
          />
          <fegaussianblur
            in="offsetted-0"
            result="blurred-0"
            stdDeviation="5"
          />
          <fecomposite
            in="blurred-0"
            in2="SourceGraphic"
            operator="in"
            result="shadow-0"
          />
          <fecomposite
            in="shadow-0"
            in2="SourceGraphic"
            operator="atop"
            result="filter-0"
          />
          <feflood
            flood-color="black"
            result="flooded-1"
          />
          <femorphology
            in="SourceAlpha"
            operator="dilate"
            radius="3"
            result="dilated-1"
          />
          <feoffset
            dx="0"
            dy="0"
            in="dilated-1"
            result="offset-1"
          />
          <fegaussianblur
            in="offset-1"
            result="blurred-1"
            stdDeviation="1.5"
          />
          <fecomposite
            in="flooded-1"
            in2="blurred-1"
            operator="in"
            result="shadow-1"
          />
          <femerge
            result="filter-1"
          >
            <femergenode
              in="shadow-1"
            />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
          <femerge>
            <femergenode
              in="filter-1"
            />
            <femergenode
              in="filter-0"
            />
          </femerge>
        </filter>
      </defs>
    </svg>
  </div>
  <div>
    <div
      class="css-hmi9ye"
    >
      <div
        class="css-1c4rusl"
      >
        <div
          class="css-ay8fpe"
          style="width: 0.8660254037844386px; height: 0.8660254037844386px; clip-path: url(#path-43f2fd1f4be4cb8199b37dd28e4589bb);"
        >
          <div
            class="css-ddh4jq"
          />
        </div>
        <div
          class="css-1g4mdh1"
          style="filter: url(#filter-95f111bf6c90801da04c3e2220c21389);"
        >
          <div
            class="css-1ec1a0"
            style="clip-path: url(#path-43f2fd1f4be4cb8199b37dd28e4589bb);"
          />
        </div>
        <div
          class="css-106pygv"
        >
          <svg
            fill="transparent"
            height="100%"
            style="position: absolute; top: 0px; left: 0px;"
            viewBox="0 0 1 1"
            width="100%"
          >
            <path
              d="M 0.5 1 L 0.9330127018922193 0.75 M 0.0669872981077807 0.75 L 0.5 1"
              fill="transparent"
              stroke="black"
              stroke-width="NaNpx"
            />
            <path
              d="M 0.0669872981077807 0.25 L 0.0669872981077807 0.75"
              fill="transparent"
              stroke="black"
              stroke-width="NaNpx"
            />
            <path
              d="M 0.9330127018922193 0.75 L 0.9330127018922193 0.75 M 0.9330127018922193 0.25 L 0.5 0 M 0.5 0 L 0.0669872981077807 0.25 M 0.5 1 L 0.5 1  "
              fill="transparent"
              stroke="black"
              stroke-width="NaNpx"
            />
            <path
              d="M 0.9330127018922193 0.75 L 0.9330127018922193 0.25"
              fill="transparent"
              stroke="black"
              stroke-width="NaNpx"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    id="once-5dda08ac87d9f3a77446f01f32a62639"
  >
    <svg>
      <clippath
        clipPathUnits="objectBoundingBox"
        id="path-43f2fd1f4be4cb8199b37dd28e4589bb"
      >
        <path
          d="M0.5 1L0.9330127018922193 0.75 0.9330127018922193 0.75 0.9330127018922193 0.25 0.5 0 0.0669872981077807 0.25 0.0669872981077807 0.75 0.5 1Z"
        />
      </clippath>
    </svg>
  </div>
  <div
    id="once-2dc643fc620a5d7bb8817d87a03d2608"
  >
    <svg
      style="overflow: hidden; height: 0px; width: 0px; opacity: 0;"
    >
      <defs>
        <filter
          color-interpolation-filters="sRGB"
          height="300%"
          id="filter-95f111bf6c90801da04c3e2220c21389"
          width="300%"
          x="-100%"
          y="-100%"
        >
          <feflood
            flood-color="rgba(0,0,0,.5)"
            result="flooded-0"
          />
          <femorphology
            in="SourceAlpha"
            operator="dilate"
            radius="3"
            result="dilated-0"
          />
          <feoffset
            dx="0.05"
            dy="0.05"
            in="dilated-0"
            result="offset-0"
          />
          <fegaussianblur
            in="offset-0"
            result="blurred-0"
            stdDeviation="0.0625"
          />
          <fecomposite
            in="flooded-0"
            in2="blurred-0"
            operator="in"
            result="shadow-0"
          />
          <femerge
            result="filter-0"
          >
            <femergenode
              in="shadow-0"
            />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
          <feflood
            flood-color="rgba(0,0,0,.5)"
            result="flooded-1"
          />
          <femorphology
            in="SourceAlpha"
            operator="dilate"
            radius="0"
            result="dilated-1"
          />
          <feoffset
            dx="0.125"
            dy="0.125"
            in="dilated-1"
            result="offset-1"
          />
          <fegaussianblur
            in="offset-1"
            result="blurred-1"
            stdDeviation="0.25"
          />
          <fecomposite
            in="flooded-1"
            in2="blurred-1"
            operator="in"
            result="shadow-1"
          />
          <femerge
            result="filter-1"
          >
            <femergenode
              in="shadow-1"
            />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
          <femerge>
            <femergenode
              in="filter-1"
            />
            <femergenode
              in="filter-0"
            />
          </femerge>
        </filter>
      </defs>
    </svg>
  </div>
</body>
`;
